2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-05  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Disable directory_limit.

=== nautilus 2.3.1 ===

2003-05-05  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	Update
	
	* configure.in:
	Bump version
	Bump requirements for eel, gnome-vfs, bonoboui

2003-05-05  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-shell-ui.xml:
	Make Go to CD burner a command
	
	* src/nautilus-window-menus.c (nautilus_window_initialize_menus_part_1):
	Hide Go to CD burner if burn: not availible.

	* docs/style-guide.html:
	Clarify the change. We still have to declare variables at the
	beginning of a block.

2003-05-05  Alexander Larsson  <alexl@redhat.com>

	* HACKING:
	Add some text about patch submission.

2003-05-03  Dave Camp  <dave@ximian.com>

	* components/hardware/nautilus-hardware-view.c:
	(nautilus_hardware_view_drag_data_received): Updated to (sort of) 
	new EelBackground api.
	
2003-05-03  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c: (icon_set_size),
	(icon_toggle_selected), (snap_position),
	(compare_icons_by_position), (placement_grid_new),
	(placement_grid_free), (placement_grid_position_is_free),
	(placement_grid_mark), (canvas_position_to_grid_position),
	(placement_grid_mark_icon), (find_empty_location), (align_icons),
	(lay_down_icons_tblr), (nautilus_icon_container_move_icon),
	(destroy), (update_stretch_at_idle), (undo_stretching),
	(nautilus_icon_container_unstretch),
	(nautilus_icon_container_is_keep_aligned), (align_icons_callback),
	(unschedule_align_icons), (schedule_align_icons),
	(nautilus_icon_container_set_keep_aligned):
	* libnautilus-private/nautilus-icon-container.h:
	* libnautilus-private/nautilus-icon-dnd.c: (handle_local_move):
	* libnautilus-private/nautilus-icon-private.h:
	* libnautilus-private/nautilus-metadata.h: