@@ -1,3 +1,11 @@
+2003-05-06  Alexander Larsson  <alexl@redhat.com>
+
+	Patch from danny_milo@yahoo.com.
+	
+	* src/nautilus-zoom-control.c (nautilus_zoom_control_scroll_event,
+	nautilus_zoom_control_class_init):
+	Handle scroll wheel events.
+
 2003-05-06  Danilo Šegan  <dsegan@gmx.net>
 
 	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
